# sonic_ct — research-grade ultrasound computed tomography (USCT) simulator.
#
# Detached from the parent RuVector workspace (note the empty [workspace]
# table below) so that `cargo test`/`cargo build` inside this crate stay fast
# and dependency-free. It is also listed in the root Cargo.toml `exclude` set.
[package]
name = "sonic_ct"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Ultrasound Computed Tomography (USCT) simulator: synthetic phantoms, ring acquisition, time-of-flight SART reconstruction, tissue segmentation, and self-learning acoustic memory."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://ruv.io"
keywords = ["ultrasound", "tomography", "usct", "reconstruction", "medical-imaging"]
categories = ["science", "simulation", "algorithms"]
readme = "README.md"

[workspace]

[lib]
crate-type = ["rlib"]

[dependencies]

[dev-dependencies]

[features]
default = []
# `std` is always on; this flag exists so the WASM wrapper crate can keep the
# same surface explicit. No heavy/optional backends are pulled by default.
std = []

[[bin]]
name = "sonic_ct_demo"
path = "src/bin/demo.rs"

[[bin]]
name = "sonic_ct_train"
path = "src/bin/train.rs"

[[bin]]
name = "sonic_ct_serve"
path = "src/bin/serve.rs"

[[bin]]
name = "sonic_ct_methods"
path = "src/bin/methods.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
